Add autogen swagger
