# src/routes/v1/index.js
@@ -2,10 +2,17 @@ const express = require('express');
 
 const router = express.Router();
 
-router.use('/base', require('./base/base.route'))
+router.use('/base',
+  // #swagger.tags = ['Base']
+  require('./base/base.route'))
 
-router.use('/auth', require('./auth/auth.route'))
 
-router.use('/user', require('./user/user.route'))
+router.use('/auth',
+  // #swagger.tags = ['Auth']
+  require('./auth/auth.route'))
+
+router.use('/user',
+  // #swagger.tags = ['User']
+  require('./user/user.route'))
 
 module.exports = router;
