# src/routes/v2/index.js
@@ -2,6 +2,8 @@ const express = require('express');
 
 const router = express.Router();
 
-router.use('/base', require('./base/base.route'))
+router.use('/base',
+  // #swagger.tags = ['Base']
+  require('./base/base.route'))
 
 module.exports = router;
